add document comments component

--- a/src/app/components/add-comments/add-comments.component.html
+++ b/src/app/components/add-comments/add-comments.component.html
@@ -11,6 +11,9 @@
     <p *ngIf="documentLocation == 'layout'">
       <small>Comentar en: <strong>{{layout.category.name}}</strong></small>
     </p>
+    <p *ngIf="documentLocation == 'subLayout'">
+      <small>Comentar en: <strong>{{layout.category.name}}</strong></small>
+    </p>
     <p *ngIf="documentLocation == 'topic'">
       <small>Comentar en: <strong>{{topic.title}}</strong></small>
     </p>
