--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -43,19 +43,17 @@
                 [disabled]="!actionControlActivityList.includes(user.activityName)">
                 <mat-icon>more_vert</mat-icon>
               </button>
+
               <mat-menu #menu="matMenu">
-                <button mat-menu-item (click)="popEditCategoryDialog()">
+                <!-- <button mat-menu-item (click)="popEditCategoryDialog()">
                   <mat-icon>settings</mat-icon>
                   <span>Editar</span>
-                </button>
-                <!-- <button mat-menu-item disabled="">
-                  <mat-icon>cloud_upload</mat-icon>
-                  <span>Cargar template</span>
-                </button>
-                <button mat-menu-item disabled="">
-                  <mat-icon>cloud_download</mat-icon>
-                  <span>Descargar template</span>
                 </button> -->
+
+                <button type="button" mat-menu-item (click)="popDocumentComments()">
+                  <mat-icon>question_answer</mat-icon>
+                  <span>Ver comentarios</span>
+                </button>
               </mat-menu>
             </div>
           </div>
