--- a/src/app/hub/user-notifications/user-notifications.component.scss
+++ b/src/app/hub/user-notifications/user-notifications.component.scss
@@ -1,5 +1,8 @@
 :host {
-  margin-top: 70px;
+  width: 100%;
+  margin-top: 80px;
+  margin-bottom: 100px;
+  float: left;
 
   mat-spinner {
     position: absolute !important;
