--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -7,35 +7,24 @@
     <div class="set-10">
       <breadcrumbs-component>
         <li>...</li>
-        <li
-          [matTooltip]="document.title"
-          matTooltipClass="tooltip"
-          (click)="
+        <li [matTooltip]="document.title" matTooltipClass="tooltip" (click)="
             utilityService.linkMe('/documentos-publicos/' + document._id)
-          "
-        >
+          ">
           <!-- {{ document.title }} -->
           ...
         </li>
-        <li
-          [matTooltip]="category.category.name"
-          matTooltipClass="tooltip"
-          (click)="
+        <li [matTooltip]="category.category.name" matTooltipClass="tooltip" (click)="
             utilityService.linkMe(
               '/documentos-publicos/' +
                 document._id +
                 '/categoria/' +
                 category._id
             )
-          "
-        >
+          ">
           ...
           <!-- {{ category.category.name }} -->
         </li>
-        <li
-          [matTooltip]="subcategory.category.name"
-          matTooltipClass="tooltip"
-          (click)="
+        <li [matTooltip]="subcategory.category.name" matTooltipClass="tooltip" (click)="
             utilityService.linkMe(
               '/documentos-publicos/' +
                 document._id +
@@ -44,14 +33,10 @@
                 '/subcategoria/' +
                 subcategory._id
             )
-          "
-        >
+          ">
           {{ subcategory.category.name }}
         </li>
-        <li
-          [matTooltip]="topic.title"
-          matTooltipClass="tooltip"
-          (click)="
+        <li [matTooltip]="topic.title" matTooltipClass="tooltip" (click)="
             utilityService.linkMe(
               '/documentos-publicos/' +
                 document._id +
@@ -62,8 +47,7 @@
                 '/tema/' +
                 topic._id
             )
-          "
-        >
+          ">
           {{ topic.shortTitle }}
         </li>
         <li [matTooltip]="solution.title" matTooltipClass="tooltip">
@@ -76,34 +60,20 @@
     </div> -->
 
     <div class="set-2 txt-center">
-      <button
-        type="button"
-        mat-mini-fab
-        color="primary"
-        class="mini"
-        matTooltip="Agregar Comentario"
-        (click)="openModalComment()"
-      >
+      <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Comentario"
+        (click)="popAddCommentsDialog()">
         <mat-icon>add_comment</mat-icon>
       </button>
-      <button
-        type="button"
-        mat-mini-fab
-        color="warn"
-        class="mini"
-        matTooltip="Agregar Testimonio"
-        (click)="openModalTestimony()"
-      >
+      <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Testimonio"
+        (click)="openModalTestimony()">
         <mat-icon>book</mat-icon>
       </button>
     </div>
     <div class="set-12 txt-left" style="margin-bottom: 10px">
       <span class="created-by">
         Autor:
-        <span class="author"
-          >{{ solution.createdBy.firstname }}
-          {{ solution.createdBy.lastname }}</span
-        >
+        <span class="author">{{ solution.createdBy.firstname }}
+          {{ solution.createdBy.lastname }}</span>
       </span>
     </div>
     <div class="set-12" style="padding-bottom: 100px">
@@ -113,36 +83,20 @@
             <!-- IMAGE -->
             <div class="set-12 image-box imghldr">
               <mat-icon *ngIf="!image">panorama</mat-icon>
-              <img
-                *ngIf="image"
-                [src]="image"
-                style="cursor: pointer"
-                (click)="popImageViewer()"
-              />
+              <img *ngIf="image" [src]="image" style="cursor: pointer" (click)="popImageViewer()" />
               <div class="info">
                 <div class="actions">
                   <p>Relevancia ciudadana</p>
                   <p class="votes">{{ stats.score }} / 100</p>
-                  <button
-                    *ngIf="userVoted"
-                    mat-raised-button
-                    color="primary"
-                    disabled
-                    style="background-color: #d9d9d9"
-                  >
+                  <button *ngIf="userVoted" mat-raised-button color="primary" disabled
+                    style="background-color: #d9d9d9">
                     Votos: {{ votes }}
                   </button>
-                  <button
-                    *ngIf="!userVoted"
-                    mat-raised-button
-                    color="black"
-                    style="
+                  <button *ngIf="!userVoted" mat-raised-button color="black" style="
                       background-color: #71f5ad;
                       font-weight: 600;
                       font-size: 16px;
-                    "
-                    (click)="openModalVote()"
-                  >
+                    " (click)="openModalVote()">
                     Votar
                   </button>
                 </div>
@@ -151,46 +105,30 @@
             <!-- DATA -->
             <div class="data-box">
               <p class="title">{{ solution.title }}</p>
-              <expanded-text
-                [text]="solution.description"
-                [title]="solution.title"
-              >
+              <expanded-text [text]="solution.description" [title]="solution.title">
               </expanded-text>
             </div>
             <div *ngIf="!isFavorites" class="favorites-button">
-              <button
-                mat-icon-button
-                style="background-color: #d9d9d9"
-                color="warn"
-                aria-label="Example icon button with a heart icon"
-                (click)="addFavorites()"
-              >
+              <button mat-icon-button style="background-color: #d9d9d9" color="warn"
+                aria-label="Example icon button with a heart icon" (click)="addFavorites()">
                 <mat-icon>favorite</mat-icon>
               </button>
             </div>
             <div *ngIf="isFavorites" class="favorites-button">
-              <button
-                mat-icon-button
-                color="warn"
-                style="background-color: #e98282"
-                aria-label="Example icon button with a heart icon"
-                (click)="removeFavorites()"
-              >
+              <button mat-icon-button color="warn" style="background-color: #e98282"
+                aria-label="Example icon button with a heart icon" (click)="removeFavorites()">
                 <mat-icon>favorite</mat-icon>
               </button>
             </div>
           </mat-card>
         </div>
         <div class="set-12 mt-2">
-          <mat-card
-            class="doc-description"
-            style="height: 480px; padding: 30px"
-          >
+          <mat-card class="doc-description" style="height: 480px; padding: 30px">
             <div class="set-12 mt-2">
               <div class="set-6 col-rgt-2" style="padding:40px">
                 <spider-chart [withBorder]="false"></spider-chart>
               </div>
-              <div class="set-6 col-rgt-2" >
+              <div class="set-6 col-rgt-2">
                 <circle-chart></circle-chart>
               </div>
               <div class="set-6"></div>
@@ -199,9 +137,7 @@
         </div>
       </div>
       <div class="set-4">
-        <public-documents-testimonials
-          [data]="solution.testimonials"
-        ></public-documents-testimonials>
+        <public-documents-testimonials [data]="solution.testimonials"></public-documents-testimonials>
       </div>
     </div>
   </div>
