--- a/src/app/components/add-document-comment/add-document-comment.component.scss
+++ b/src/app/components/add-document-comment/add-document-comment.component.scss
@@ -1,84 +1,102 @@
 :host {
-    .form-body {
-      margin-top: 20pt;
-     
-  
-      > * {
-        margin: 0;
-      }
-  
-      textarea {
-        height: 100pt;
-      }
-  
-      .imagebox {
-        border-color: #636363;
-        border-style: dashed;
-        border-width: 1px;
-        width: 100%;
-        min-height: 100pt;
-        height: auto;
-        margin-bottom: 50pt;
-        position: relative;
-        border-radius: 5px;
-  
-        label {
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          font-size: 12pt;
-          user-select: none;
-          z-index: 3;
-          cursor: pointer;
-          position: absolute;
-          top: 0;
-          left: 0;
-          transition: all 390ms linear;
-          box-sizing: border-box;
-  
-          &.data {
-            background-color: rgba(250, 250, 250, 0.5);
-            opacity: 0;
-  
-            &:hover {
-              opacity: 0.5;
-            }
-          }
-  
-          mat-icon {
-            font-size: 25pt;
-            color: #306eff;
-          }
-  
-          span {
-            margin-top: 8pt;
-          }
-        }
-  
-        .preview {
-          width: 100%;
-          // height: 100%;A
-          object-fit: cover;
-          transition: opacity 450ms linear;
-          z-index: 2;
-  
-          &.empty {
-            opacity: 0;
-          }
-  
-          &.data {
-            opacity: 1;
-          }
-        }
-      }
+  .form-body {
+    margin-top: 20px;
+
+    >* {
+      margin: 0;
     }
-    .submit-button {
-      display: block;
-      margin: 0 auto;
-      margin-top: 10pt;
+
+    textarea {
+      min-height: 100px;
+      max-height: 100px;
+    }
+
+    .imagebox {
+      border-color: #636363;
+      border-style: dashed;
+      border-width: 1px;
+      width: 100%;
+      min-height: 100pt;
+      height: auto;
+      margin-bottom: 50pt;
+      position: relative;
+      border-radius: 5px;
+
+      label {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        font-size: 12pt;
+        user-select: none;
+        z-index: 3;
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: all 390ms linear;
+        box-sizing: border-box;
+
+        &.data {
+          background-color: rgba(250, 250, 250, 0.5);
+          opacity: 0;
+
+          &:hover {
+            opacity: 0.5;
+          }
+        }
+
+        mat-icon {
+          font-size: 25pt;
+          color: #306eff;
+        }
+
+        span {
+          margin-top: 8pt;
+        }
+      }
+
+      .preview {
+        width: 100%;
+        // height: 100%;A
+        object-fit: cover;
+        transition: opacity 450ms linear;
+        z-index: 2;
+
+        &.empty {
+          opacity: 0;
+        }
+
+        &.data {
+          opacity: 1;
+        }
+      }
     }
   }
-  
+
+  .submit-button {
+    display: block;
+    margin: 0 auto;
+    margin-top: 10pt;
+  }
+
+  .ctrls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    * {
+      margin: 0;
+    }
+
+    button {
+      margin-left: 10px;
+    }
+
+    button:first-child {
+      margin: 0;
+    }
+  }
+}
