--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -1,10 +1,19 @@
 :host {
   width: 100%;
   float: left;
-  padding: 40px;
-  background: #00031d;
+  padding: 20px 40px;
+  background: #D9D9D9;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 9pt;
+
+  * {
+    margin: 0;
+  }
 
   img {
-    width: 20% !important;
+    width: 5% !important;
+    margin-right: 10px;
   }
 }
