--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -37,20 +37,29 @@
                 [disabled]="!actionControlActivityList.includes(user.activityName)">
                 <mat-icon>more_vert</mat-icon>
               </button>
+
               <mat-menu #menu="matMenu">
-                <button mat-menu-item (click)="popEditDocumentDialog()">
+                <button type="button" mat-menu-item (click)="popEditDocumentDialog()">
                   <mat-icon>edit</mat-icon>
                   <span>Editar documento</span>
                 </button>
-                <button mat-menu-item (click)="popWindowAlertDialog()" [disabled]="document.inCover">
+
+                <button type="button" mat-menu-item (click)="popDocumentComments()">
+                  <mat-icon>question_answer</mat-icon>
+                  <span>Ver comentarios</span>
+                </button>
+
+                <button type="button" mat-menu-item (click)="popWindowAlertDialog()" [disabled]="document.inCover">
                   <mat-icon>home</mat-icon>
                   <span>Usar como portada</span>
                 </button>
-                <button mat-menu-item (click)="popAddCoverTextDialog()">
+
+                <button type="button" mat-menu-item (click)="popAddCoverTextDialog()">
                   <mat-icon>edit_note</mat-icon>
                   <span>{{document.coverDescription ? 'Editar' : 'Agregar'}} texto portada</span>
                 </button>
-                <button mat-menu-item (click)="setDocumentAsPublicPrivate()">
+
+                <button type="button" mat-menu-item (click)="setDocumentAsPublicPrivate()">
                   <mat-icon>lock</mat-icon>
                   <span>Marcar como {{document.isPublic ? 'Privado' : 'Público'}}</span>
                 </button>
