--- a/src/app/documents/single-solution/single-solution.component.html
+++ b/src/app/documents/single-solution/single-solution.component.html
@@ -52,9 +52,13 @@
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
-                <button type="button" mat-menu-item>
+                <!-- <button type="button" mat-menu-item>
                   <mat-icon>edit</mat-icon>
                   <span>Editar</span>
+                </button> -->
+                <button type="button" mat-menu-item (click)="popDocumentComments()">
+                  <mat-icon>question_answer</mat-icon>
+                  <span>Ver comentarios</span>
                 </button>
               </mat-menu>
             </div>
