--- a/src/app/hub/user-notifications/user-notifications.component.html
+++ b/src/app/hub/user-notifications/user-notifications.component.html
@@ -14,50 +14,104 @@
 
     <mat-card class="set-12" *ngIf="notifications.length != 0">
       <div class="set-12" *ngFor="let notification of notifications">
-        <div class="set-12 notification" [class.unread]="!notification.viewed">
-          <div class="set-2">
-            <div class="avatar">
-              <strong>
-                <small *ngIf="notification.message_from.avatarImage == null">
-                  {{ user.firstname | firstword | firstletter }}{{ user.lastname | firstword | firstletter }}
-                </small>
-              </strong>
-              <img [src]="notification.message_from.avatarImage" alt=""
-                *ngIf="notification.message_from.avatarImage != null">
+        <div class="set-12" *ngIf="notification.notificationType.name == 'document_invite'">
+          <div class="set-12 notification" [class.unread]="!notification.viewed">
+            <div class="set-2">
+              <div class="avatar">
+                <strong>
+                  <small *ngIf="notification.message_from.avatarImage == null">
+                    {{ user.firstname | firstword | firstletter }}{{ user.lastname | firstword | firstletter }}
+                  </small>
+                </strong>
+                <img [src]="notification.message_from.avatarImage" alt=""
+                  *ngIf="notification.message_from.avatarImage != null">
+              </div>
+            </div>
+
+            <div class="set-8">
+              <p><small>{{notification.message}}</small></p>
+              <p>
+                <button type="button" (click)="linkMe('/documentos/' + notification.document._id, notification)">
+                  <strong>{{notification.document.title}}</strong>
+                </button>
+              </p>
+              <p>
+                <small>{{notification.createdAt | date: 'mediumDate'}} - {{notification.createdAt | date:
+                  'mediumTime'}}</small>
+              </p>
+            </div>
+
+            <div class="set-2 txt-right">
+              <button mat-icon-button [matMenuTriggerFor]="menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="linkMe('/documentos/' + notification.document._id, notification)">
+                  <mat-icon>launch</mat-icon>
+                  <span>Abrir</span>
+                </button>
+                <button mat-menu-item (click)="markNotificationAsRead(notification)">
+                  <mat-icon>mark_email_read</mat-icon>
+                  <span>Marcar como leído</span>
+                </button>
+                <button mat-menu-item (click)="killNotification(notification)">
+                  <mat-icon>delete</mat-icon>
+                  <span>Eliminar</span>
+                </button>
+              </mat-menu>
             </div>
           </div>
+        </div>
 
-          <div class="set-8">
-            <p><small>{{notification.message}}</small></p>
-            <p>
-              <button type="button" (click)="linkMe('/documentos/' + notification.document._id, notification)">
-                <strong>{{notification.document.title}}</strong>
-              </button>
-            </p>
-            <p>
-              <small>{{notification.createdAt | date: 'mediumDate'}} - {{notification.createdAt | date:
-                'mediumTime'}}</small>
-            </p>
-          </div>
+        <div class="set-12" *ngIf="notification.notificationType.name == 'new_comment'">
+          <div class="set-12 notification" [class.unread]="!notification.viewed">
+            <div class="set-2">
+              <div class="avatar">
+                <strong>
+                  <small *ngIf="notification.message_from.avatarImage == null">
+                    {{ notification.message_from.firstname | firstword | firstletter }}{{
+                    notification.message_from.lastname | firstword | firstletter }}
+                  </small>
+                </strong>
+                <img [src]="notification.message_from.avatarImage" alt=""
+                  *ngIf="notification.message_from.avatarImage != null">
+              </div>
+            </div>
 
-          <div class="set-2 txt-right">
-            <button mat-icon-button [matMenuTriggerFor]="menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="linkMe('/documentos/' + notification.document._id, notification)">
-                <mat-icon>launch</mat-icon>
-                <span>Abrir</span>
+            <div class="set-8">
+              <p>
+                <small>{{notification.message}} de: <strong>{{notification.message_from.firstname}}
+                    {{notification.message_from.lastname}}</strong></small>
+              </p>
+              <p>
+                <small>{{notification.createdAt | date: 'mediumDate'}} - {{notification.createdAt | date:
+                  'mediumTime'}}</small>
+              </p>
+            </div>
+
+            <div class="set-2 txt-right">
+              <button mat-icon-button [matMenuTriggerFor]="menu">
+                <mat-icon>more_vert</mat-icon>
               </button>
-              <button mat-menu-item (click)="markNotificationAsRead(notification)">
-                <mat-icon>mark_email_read</mat-icon>
-                <span>Marcar como leído</span>
-              </button>
-              <button mat-menu-item (click)="killNotification(notification)">
-                <mat-icon>delete</mat-icon>
-                <span>Eliminar</span>
-              </button>
-            </mat-menu>
+              <mat-menu #menu="matMenu">
+                <button type="button" mat-menu-item (click)="popViewMessageDialog(notification)">
+                  <mat-icon>auto_stories</mat-icon>
+                  <span>Leer</span>
+                </button>
+                <button type="button" mat-menu-item (click)="linkMe(notification.metadata.redirectURL, notification)">
+                  <mat-icon>launch</mat-icon>
+                  <span>Abrir</span>
+                </button>
+                <button type="button" mat-menu-item (click)="markNotificationAsRead(notification)">
+                  <mat-icon>mark_email_read</mat-icon>
+                  <span>Marcar como leído</span>
+                </button>
+                <button type="button" mat-menu-item (click)="killNotification(notification)">
+                  <mat-icon>delete</mat-icon>
+                  <span>Eliminar</span>
+                </button>
+              </mat-menu>
+            </div>
           </div>
         </div>
       </div>
