--- a/src/app/public-documents/category/category.component.scss
+++ b/src/app/public-documents/category/category.component.scss
@@ -1,73 +1,90 @@
 :host {
-  .container {
-    margin: 120px 40px;
-    margin-bottom: 100px;
+  padding: 40px 40px 70px 40px;
+  margin-top: 80px;
+  float: left;
+  width: 100%;
+  height: auto;
 
-    .select>select {
-      width: 150px;
-      padding: 0px 20px;
-      height: 26px;
-      font-weight: 400;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid #a5a5a5;
-      background-color: white;
+  .select>select {
+    width: 150px;
+    padding: 0px 20px;
+    height: 26px;
+    font-weight: 400;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #a5a5a5;
+    background-color: white;
+  }
+
+  .doc-description {
+    padding: 0 !important;
+  }
+
+  .imghldr {
+    min-height: 250px;
+    max-height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba($color: #CEDDFF, $alpha: 0.4);
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+    overflow: hidden;
+
+    mat-icon {
+      font-size: 70pt;
+      color: rgba($color: #000000, $alpha: 0.1);
     }
 
-    .doc-description {
-      padding: 0 !important;
+    img {
+      width: 100%;
+      height: auto;
+      position: relative;
+      object-fit: contain;
+    }
+  }
+
+  .infohldr {
+    padding: 5px 20px;
+  }
+
+  .card-title {
+    font-weight: 700;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #000000;
+    letter-spacing: 1px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+  }
+
+  .card-description {
+    font-weight: 400;
+    font-size: 14px;
+    text-align: justify;
+    color: #636363;
+    margin-bottom: 8px;
+
+    &.link {
+      display: inline-block;
+      text-decoration: underline;
+      font-size: 12px;
+      cursor: pointer;
+    }
+  }
+
+  .cards {
+    display: flex;
+
+    .set-6 {
+      flex: 1;
     }
 
-    .imghldr {
-      min-height: 250px;
-      max-height: 250px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: rgba($color: #CEDDFF, $alpha: 0.4);
-      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
-      overflow: hidden;
-
-      mat-icon {
-        font-size: 70pt;
-        color: rgba($color: #000000, $alpha: 0.1);
-      }
-
-      img {
-        width: 100%;
-        height: auto;
-        position: relative;
-        object-fit: contain;
-      }
+    .set-6:nth-child(odd) {
+      padding-right: 15px;
     }
 
-    .infohldr {
-      padding: 5px 20px;
-    }
-
-    .card-title {
-      font-weight: 700;
-      font-size: 20px;
-      text-transform: uppercase;
-      color: #000000;
-      letter-spacing: 1px;
-      margin-top: 15px;
-      margin-bottom: 20px;
-    }
-
-    .card-description {
-      font-weight: 400;
-      font-size: 14px;
-      text-align: justify;
-      color: #636363;
-      margin-bottom: 8px;
-
-      &.link {
-        display: inline-block;
-        text-decoration: underline;
-        font-size: 12px;
-        cursor: pointer;
-      }
+    .set-6:nth-child(even) {
+      padding-left: 15px;
     }
   }
 
