--- a/src/app/public-documents/topic/topic.component.scss
+++ b/src/app/public-documents/topic/topic.component.scss
@@ -1,309 +1,384 @@
 :host {
-  .container {
-    margin: 120px 40px;
-    margin-bottom: 100px;
+  padding: 40px 40px 70px 40px;
+  margin-top: 80px;
+  float: left;
+  width: 100%;
+  height: auto;
 
-    .main-box {
-      background-color: white;
-    }
+  .col-lft {
+    padding-right: 30px;
 
-    .container-titles {
-      background-color: white;
-      .title {
-        // display: flex;
-
-        // align-items: flex-start;
-        p {
-          margin-left: 18%;
-          font-size: 14px;
-          font-weight: 500;
-          margin-top: 10px;
-        }
-        img {
-          position: absolute;
-          margin-left: 5px;
-        }
-      }
-    }
-
-    .testimony-box {
-      min-height: 600px;
-      overflow-y: scroll;
-      // background-color: red;
-    }
-
-    .actions-box {
-      position: absolute;
-      bottom: 20px;
-      // background-color: red;
-      p {
-        font-size: 14px;
-      }
-      .title {
-        font-size: 14px;
-        font-weight: 500;
-        color: white;
-      }
-      .value {
-        color: white;
-
-        font-size: 20px;
-        font-weight: 800;
-      }
-      .vote-button {
-        margin-top: 10px;
-        background-color: #306eff;
-        padding: 6px 50px;
-        border-radius: 4px;
-        color: white;
-        font-size: 13px;
-        font-weight: 500;
-      }
-    }
-    .favorites-button {
+    mat-card {
+      padding: 0;
       position: relative;
-      top: 17px;
-      right: 17px;
-      width: 40px;
-      height: 40px;
-      display: flex;
-      justify-content: center;
 
-      .mat-button.mat-warn,
-      .mat-icon-button.mat-warn,
-      .mat-stroked-button.mat-warn {
-        background: #e98282;
-        color: #ffffff;
-        font-size: 15px;
-        width: 32px;
-        height: 32px;
-        border: solid;
-        border-color: #ffffff;
+      .icons {
+        position: absolute;
+        right: 15px;
+        bottom: 15px;
         display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .mat-icon-button i,
-      .mat-icon-button .mat-icon {
-        line-height: 24px;
-        font-size: 14px;
+
+        button {
+          margin-left: 10px;
+          width: 32px;
+          height: 32px;
+          border-radius: 100%;
+          // background: #d9d9d9;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          * {
+            margin: 0;
+          }
+        }
+
+        mat-icon {
+          font-size: 11pt;
+          color: #ffffff;
+        }
       }
     }
 
-    .users-container {
-      p {
-        font-size: 14px;
-        font-weight: 500;
-      }
+    .listhldr {
+      margin-top: 30px;
     }
-    .featured-users {
-      height: min-content;
-    }
-    .doc-description {
-      height: 280px;
-      padding: 0 !important;
-    }
-    .card-item {
-      background-color: white;
-      border-radius: 6px;
-      box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
-        0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 
-      .title {
-        font-size: 14px;
-        font-weight: 600;
-      }
-      .image {
-        width: 20px;
-        height: 20px;
-        border-radius: 100%;
-      }
-      .description {
-        margin-top: 10px;
-        font-size: 14px;
-      }
-      .date {
-        margin-top: 10px;
-        font-size: 12px;
-      }
+    .imghldr,
+    .infohldr {
+      height: 100%;
+      float: left;
     }
 
     .imghldr {
-      min-height: 250px;
-      max-height: 250px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: rgba($color: #ceddff, $alpha: 0.4);
-      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
-      overflow: hidden;
-
-      mat-icon {
-        font-size: 70pt;
-        color: rgba($color: #000000, $alpha: 0.1);
-      }
-
-      img {
-        width: 100%;
-        height: auto;
-        position: relative;
-        object-fit: contain;
-      }
+      width: 40%;
     }
 
     .infohldr {
-      padding: 5px 40px;
-    }
+      width: 60%;
+      padding: 20px;
 
-    .card-title {
-      color: #636363;
-      font-weight: 600;
-      font-size: 18px;
-      line-height: 30px;
-      // text-transform: uppercase;
-      color: #000000;
-      margin-bottom: 10px;
-      // letter-spacing: 0.5px;
-      margin-top: 15px;
+      h3 {
+        margin-bottom: 15px;
+      }
     }
+  }
 
-    .card-description {
-      font-weight: 400;
+  .col-rgt {
+    padding: 0;
+  }
+
+  .main-box {
+    background-color: white;
+  }
+
+  .container-titles {
+    background-color: white;
+
+    .title {
+      p {
+        margin-left: 18%;
+        font-size: 14px;
+        font-weight: 500;
+        margin-top: 10px;
+      }
+
+      img {
+        position: absolute;
+        margin-left: 5px;
+      }
+    }
+  }
+
+  .testimony-box {
+    min-height: 600px;
+    overflow-y: scroll;
+  }
+
+  .actions-box {
+    position: absolute;
+    bottom: 20px;
+
+    p {
       font-size: 14px;
-      text-align: justify;
-      color: #636363;
-      margin-bottom: 8px;
-
-      &.link {
-        display: inline-block;
-        text-decoration: underline;
-        font-size: 12px;
-        cursor: pointer;
-      }
     }
 
-    table {
-      width: 100%;
-      box-shadow: none !important;
-      padding: 0px 10px;
-      padding-bottom: 50px;
+    .title {
+      font-size: 14px;
+      font-weight: 500;
+      color: white;
     }
 
-    .header-buttons {
-      padding: 0px 30px;
+    .value {
+      color: white;
+
+      font-size: 20px;
+      font-weight: 800;
+    }
+
+    .vote-button {
+      margin-top: 10px;
+      background-color: #306eff;
+      padding: 6px 50px;
+      border-radius: 4px;
+      color: white;
+      font-size: 13px;
+      font-weight: 500;
+    }
+  }
+
+  .favorites-button {
+    position: relative;
+    top: 17px;
+    right: 17px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+
+    .mat-button.mat-warn,
+    .mat-icon-button.mat-warn,
+    .mat-stroked-button.mat-warn {
+      background: #e98282;
+      color: #ffffff;
+      font-size: 15px;
+      width: 32px;
+      height: 32px;
+      border: solid;
+      border-color: #ffffff;
       display: flex;
-      align-items: center;
       justify-content: center;
-
-      .button-box {
-        width: 80px;
-        text-align: center;
-        .add-button {
-          color: white;
-        }
-        .green {
-          background-color: #20c588;
-        }
-        .purple {
-          background-color: #9747ff;
-        }
-        p {
-          text-align: center;
-          font-size: 14px;
-          font-weight: 500;
-        }
-      }
+      align-items: center;
     }
 
-    .header-card {
-      mat-card {
-        padding: 0;
-        display: flex;
-        min-height: 250px;
+    .mat-icon-button i,
+    .mat-icon-button .mat-icon {
+      line-height: 24px;
+      font-size: 14px;
+    }
+  }
 
-        .image-box {
-          width: 40%;
-          position: relative;
-          margin: 0;
+  .users-container {
+    p {
+      font-size: 14px;
+      font-weight: 500;
+    }
+  }
 
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            filter: brightness(70%);
+  .featured-users {
+    height: min-content;
+  }
+
+  .doc-description {
+    height: 280px;
+    padding: 0 !important;
+  }
+
+  .card-item {
+    background-color: white;
+    border-radius: 6px;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+      0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+
+    .title {
+      font-size: 14px;
+      font-weight: 600;
+    }
+
+    .image {
+      width: 20px;
+      height: 20px;
+      border-radius: 100%;
+    }
+
+    .description {
+      margin-top: 10px;
+      font-size: 14px;
+    }
+
+    .date {
+      margin-top: 10px;
+      font-size: 12px;
+    }
+  }
+
+  .imghldr {
+    min-height: 250px;
+    max-height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba($color: #ceddff, $alpha: 0.4);
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+    overflow: hidden;
+
+    mat-icon {
+      font-size: 70pt;
+      color: rgba($color: #000000, $alpha: 0.1);
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+      position: relative;
+      object-fit: contain;
+    }
+  }
+
+  .infohldr {
+    padding: 5px 40px;
+  }
+
+  .card-title {
+    color: #636363;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 30px;
+    color: #000000;
+    margin-bottom: 10px;
+    margin-top: 15px;
+  }
+
+  .card-description {
+    font-weight: 400;
+    font-size: 14px;
+    text-align: justify;
+    color: #636363;
+    margin-bottom: 8px;
+
+    &.link {
+      display: inline-block;
+      text-decoration: underline;
+      font-size: 12px;
+      cursor: pointer;
+    }
+  }
+
+  table {
+    width: 100%;
+    box-shadow: none !important;
+    padding: 0px 10px;
+    padding-bottom: 50px;
+  }
+
+  .header-buttons {
+    padding: 0px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .button-box {
+      width: 80px;
+      text-align: center;
+
+      .add-button {
+        color: white;
+      }
+
+      .green {
+        background-color: #20c588;
+      }
+
+      .purple {
+        background-color: #9747ff;
+      }
+
+      p {
+        text-align: center;
+        font-size: 14px;
+        font-weight: 500;
+      }
+    }
+  }
+
+  .header-card {
+    mat-card {
+      padding: 0;
+      display: flex;
+
+      .image-box {
+        width: 40%;
+        position: relative;
+        margin: 0;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          filter: brightness(70%);
+        }
+
+        .info {
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 15pt 10pt;
+
+          .custom-circle {
+            width: 55pt;
+            height: 55pt;
+            border-radius: 50%;
+            border: 2px solid #fff;
+            background-color: #ceddff;
+            cursor: auto;
+            margin: 0;
+            margin-right: 20pt;
+
+            mat-icon {
+              color: #306eff;
+              font-size: 22pt;
+            }
           }
 
-          .info {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 15pt 10pt;
+          .actions {
+            margin: 0;
+            text-align: center;
 
-            .custom-circle {
-              width: 55pt;
-              height: 55pt;
-              border-radius: 50%;
-              border: 2px solid #fff;
-              background-color: #ceddff;
-              cursor: auto;
-              margin: 0;
-              margin-right: 20pt;
-
-              mat-icon {
-                color: #306eff;
-                font-size: 22pt;
-              }
+            p {
+              font-size: 12pt;
+              color: #fff;
+              font-weight: 800;
+              text-shadow: 0 0 4px #919191;
             }
 
-            .actions {
-              margin: 0;
-              text-align: center;
-              p {
-                font-size: 12pt;
-                color: #fff;
-                font-weight: 800;
-                text-shadow: 0 0 4px #919191;
-              }
+            button {
+              width: 100%;
+              margin-top: 8pt;
+            }
 
-              button {
-                width: 100%;
-                margin-top: 8pt;
-              }
-
-              .votes {
-                margin-top: 4px;
-                font-size: 16pt;
-                font-weight: bold;
-              }
+            .votes {
+              margin-top: 4px;
+              font-size: 16pt;
+              font-weight: bold;
             }
           }
         }
+      }
 
-        .data-box {
-          width: 60%;
-          padding: 30px 30px;
+      .data-box {
+        width: 60%;
+        padding: 30px 30px;
 
-          .title {
-            font-size: 14pt;
-            margin-bottom: 12pt;
-            font-weight: 700;
-          }
+        .title {
+          font-size: 14pt;
+          margin-bottom: 12pt;
+          font-weight: 700;
+        }
 
-          .short-description {
-            color: #636363;
-            font-size: 11pt;
-            line-height: 19pt;
-          }
+        .short-description {
+          color: #636363;
+          font-size: 11pt;
+          line-height: 19pt;
+        }
 
-          .show-more {
-            display: block;
-            margin-top: 20pt;
-            text-decoration: underline;
-            color: #306eff;
-          }
+        .show-more {
+          display: block;
+          margin-top: 20pt;
+          text-decoration: underline;
+          color: #306eff;
         }
       }
     }
@@ -323,11 +398,13 @@
     border-radius: 20px;
     height: 2px;
   }
+
   .favorite-button {
     position: absolute;
     margin-left: 25px;
     left: 320px;
     top: 110px;
+
     .favorite {
       width: 32px;
       height: 32px;
@@ -337,6 +414,7 @@
       border-color: #ffff;
       display: flex;
       align-items: center;
+
       .mat-icon {
         font-size: 12px;
         height: 18px;
