edit topic/solution - user count

--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -47,7 +47,7 @@
               <mat-menu #menu="matMenu">
                 <button mat-menu-item (click)="popEditCategoryDialog()">
                   <mat-icon>settings</mat-icon>
-                  <span>Editar</span>
+                  <span>Editar categoría</span>
                 </button>
 
                 <button type="button" mat-menu-item (click)="popDocumentComments()">
