--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -40,7 +40,7 @@
 
               <mat-menu #menu="matMenu">
                 <button type="button" mat-menu-item (click)="popEditDocumentDialog()">
-                  <mat-icon>edit</mat-icon>
+                  <mat-icon>settings</mat-icon>
                   <span>Editar documento</span>
                 </button>
 
