fix edit components title

--- a/src/app/components/edit-document-data/edit-document-data.component.html
+++ b/src/app/components/edit-document-data/edit-document-data.component.html
@@ -4,7 +4,7 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dialog-head">
-    <h3>{{document.title}}</h3>
+    <!-- <h3>{{document.title}}</h3> -->
     <!-- <div class="set-9">
       <h3>{{document.title}}</h3>
     </div>
