--- a/src/app/components/edit-topic-data/edit-topic-data.component.html
+++ b/src/app/components/edit-topic-data/edit-topic-data.component.html
@@ -4,7 +4,7 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dialog-head">
-    <h3>{{topic.title}}</h3>
+    <!-- <h3>{{topic.title}}</h3> -->
   </div>
 
   <div class="set-12 dialog-body">
